# yladtc

./: .gitignore  CMakeLists.txt  memo.md
include/: def.h  list.h  vector.h
src/: list.c  vector.c
test/: listwrapper.c  tdef.h  test.c  tlist.c  tvector.c  vectorwrapper.c
